--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,343 @@
-html{box-sizing:border-box;font-size:100%}*,*::before,*::after{margin:0;padding:0;box-sizing:inherit}*:focus{outline:none;box-shadow:0 0 0 0.3125rem rgba(241,94,80,.5)}body{overflow-x:hidden}a:link,a:visited{text-decoration:none}ul{list-style:none}.wrapper{max-width:min(100% - 2rem,69.375rem);margin-inline:auto}body{font-family:"Inter",sans-serif;font-weight:400;line-height:1;background-color:#fffdfa}.heading-primary{font-size:2.5rem;font-size:clamp(2.5rem,2.14rem + 1.5vw,3.5rem);color:#00001a;line-height:2.5rem;line-height:clamp(2.5rem,2.14rem + 1.5vw,3.5rem);font-weight:800}.heading-secondary{font-size:1.25rem;line-height:1.5rem;font-weight:800;color:#fffdfa}.heading-tertiary{font-size:1.125rem;font-weight:800;color:#00001a;line-height:1.5rem;margin-bottom:0.5625rem}.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0}.btn:link,.btn:visited{font-size:0.875rem;font-weight:700;text-transform:uppercase;letter-spacing:0.27375rem;line-height:1.5rem;color:#fffdfa;background-color:#f15e50;display:inline-block;padding:0.9375rem 2.1875rem;transition:all .3s}.btn:hover{background-color:#00001a}.nav-toggle{display:none}@media screen and (max-width: 35em){.nav-toggle{display:block;position:absolute;z-index:20;top:2.25rem;right:2rem;border:none;background-image:url(../images/icon-menu.svg);background-color:rgba(0,0,0,0);background-repeat:no-repeat;width:2rem;aspect-ratio:1}.nav-toggle[aria-expanded=true]{background-image:url(../images/icon-menu-close.svg);position:fixed}}.grid{display:grid;gap:rem(30)}.grid--2-cols{grid-template-columns:repeat(2, 1fr)}.grid--3-cols{grid-template-columns:repeat(3, 1fr)}.header{display:flex;justify-content:space-between;align-items:center}.header-navigation__list{display:flex;align-items:center;gap:2.5rem;font-size:0.9375rem;transition:all .3s ease-in}@media screen and (max-width: 35em){.header-navigation__list{position:fixed;z-index:10;inset:0 0 0 30%;background-color:#fffdfa;flex-direction:column;gap:1.5rem;padding:8.75rem 1.5rem;align-items:start;transform:translateX(100%);visibility:hidden;height:100vh}.header-navigation__list[data-visible=true]{transform:translateX(0);visibility:visible}}.header-navigation__link:link,.header-navigation__link:visited{color:#5d5f79;line-height:1.625rem;transition:all .3s}.header-navigation__link:hover{color:#f15e50}@media screen and (max-width: 35em){.navigation-bg{background-color:rgba(0,0,26,.7);inset:0 0;position:fixed;height:100vh}}.hero__img-box{margin-bottom:1.75rem}.hero__img{width:100%}.hero__textbox{display:flex;flex-direction:column;gap:1.0625rem}@media screen and (min-width: 56.25em){.hero__textbox{display:grid;grid-template-columns:1fr 1fr;column-gap:1.875rem}}.hero__textbox-text p{font-size:0.9375rem;line-height:1.625rem;color:#5d5f79;margin-bottom:1.875rem}@media screen and (min-width: 56.25em){.hero-side{display:grid;grid-template-columns:2fr 1fr;column-gap:1.875rem}}.sidebar{background-color:#00001a;padding:1.5rem 1.25rem}.sidebar__new{color:#e9ab53;font-size:2rem;font-size:clamp(2rem,1.82rem + .7511737089vw,2.5rem);font-weight:700;margin-bottom:2.1875rem}.sidebar__textbox{display:flex;flex-direction:column;gap:0.625rem}.sidebar__textbox-link:link,.sidebar__textbox-link:visited{color:#fffdfa;transition:all .3s}.sidebar__textbox-link:hover{color:#e9ab53}.sidebar__textbox-text{font-size:0.9375rem;line-height:1.625rem;color:#c5c6ce}.sidebar__textbox:not(:last-child){border-bottom:1px solid #5d5f79;margin-bottom:1.875rem;padding-bottom:1.875rem}.articles{display:flex;flex-direction:column;gap:2rem}@media screen and (min-width: 56.25em){.articles{display:grid;grid-template-columns:repeat(3, 1fr)}}.articles__article{display:flex;gap:1.125rem;align-items:center}.articles__article-img{width:6.25rem;object-fit:cover}.articles__article-number{font-size:2rem;font-weight:700;color:#c5c6ce;line-height:2rem;margin-bottom:0.75rem}.articles__article-link:link,.articles__article-link:visited{color:#00001a;transition:all .3s}.articles__article-link:hover{color:#f15e50}.articles__article-text{font-size:0.9375rem;line-height:1.625rem;color:#5d5f79}.footer{font-size:0.9375rem;color:#5d5f79;text-align:center;line-height:1.25rem}.footer__link:link,.footer__link:visited{color:#00001a;font-weight:700;transition:all .3s}.footer__link:hover{color:#f15e50}.header{padding:1.875rem 0}main{margin-bottom:4rem}@media screen and (min-width: 56.25em){.hero-side{margin-bottom:4rem}}.hero{margin-bottom:4rem}@media screen and (min-width: 56.25em){.hero{margin-bottom:0}}.sidebar{margin-bottom:4rem}@media screen and (min-width: 56.25em){.sidebar{margin-bottom:0}}.footer{padding-bottom:4rem}/*# sourceMappingURL=style.css.map */
+html {
+  box-sizing: border-box;
+  font-size: 100%;
+}
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.3125rem rgba(241, 94, 80, 0.5);
+}
+
+body {
+  overflow-x: hidden;
+}
+
+a:link,
+a:visited {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+.wrapper {
+  max-width: min(100% - 2rem, 69.375rem);
+  margin-inline: auto;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+body {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  line-height: 1;
+  background-color: hsl(36deg, 100%, 99%);
+}
+
+.heading-primary {
+  font-size: 2.5rem;
+  font-size: clamp(2.5rem, 2.14rem + 1.5vw, 3.5rem);
+  color: hsl(240deg, 100%, 5%);
+  line-height: 2.5rem;
+  line-height: clamp(2.5rem, 2.14rem + 1.5vw, 3.5rem);
+  font-weight: 800;
+}
+
+.heading-secondary {
+  font-size: 1.25rem;
+  line-height: 1.5rem;
+  font-weight: 800;
+  color: hsl(36deg, 100%, 99%);
+}
+
+.heading-tertiary {
+  font-size: 1.125rem;
+  font-weight: 800;
+  color: hsl(240deg, 100%, 5%);
+  line-height: 1.5rem;
+  margin-bottom: 0.5625rem;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap; /* added line */
+  border: 0;
+}
+
+.btn:link, .btn:visited {
+  font-size: 0.875rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.27375rem;
+  line-height: 1.5rem;
+  color: hsl(36deg, 100%, 99%);
+  background-color: hsl(5deg, 85%, 63%);
+  display: inline-block;
+  padding: 0.9375rem 2.1875rem;
+  transition: all 0.3s;
+}
+.btn:hover {
+  background-color: hsl(240deg, 100%, 5%);
+}
+
+.nav-toggle {
+  display: none;
+}
+@media screen and (max-width: 35em) {
+  .nav-toggle {
+    display: block;
+    position: absolute;
+    z-index: 20;
+    top: 2.25rem;
+    right: 2rem;
+    border: none;
+    background-image: url(../images/icon-menu.svg);
+    background-color: transparent;
+    background-repeat: no-repeat;
+    width: 2rem;
+    aspect-ratio: 1;
+  }
+  .nav-toggle[aria-expanded=true] {
+    background-image: url(../images/icon-menu-close.svg);
+    position: fixed;
+  }
+}
+
+.grid {
+  display: grid;
+  gap: rem(30);
+}
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-navigation__list {
+  display: flex;
+  align-items: center;
+  gap: 2.5rem;
+  font-size: 0.9375rem;
+  transition: all 0.3s ease-in;
+}
+@media screen and (max-width: 35em) {
+  .header-navigation__list {
+    position: fixed;
+    z-index: 10;
+    inset: 0 0 0 30%;
+    background-color: hsl(36deg, 100%, 99%);
+    flex-direction: column;
+    gap: 1.5rem;
+    padding: 8.75rem 1.5rem;
+    align-items: start;
+    transform: translateX(100%);
+    visibility: hidden;
+    height: 100vh;
+  }
+  .header-navigation__list[data-visible=true] {
+    transform: translateX(0);
+    visibility: visible;
+  }
+}
+.header-navigation__link:link, .header-navigation__link:visited {
+  color: hsl(237deg, 13%, 42%);
+  line-height: 1.625rem;
+  transition: all 0.3s;
+}
+.header-navigation__link:hover {
+  color: hsl(5deg, 85%, 63%);
+}
+
+@media screen and (max-width: 35em) {
+  .overlay {
+    background-color: rgba(0, 0, 26, 0.7);
+    inset: 0 0;
+    position: fixed;
+    height: 100vh;
+    z-index: 5;
+  }
+}
+
+.hero__img-box {
+  margin-bottom: 1.75rem;
+}
+.hero__img {
+  width: 100%;
+}
+.hero__textbox {
+  display: flex;
+  flex-direction: column;
+  gap: 1.0625rem;
+}
+@media screen and (min-width: 56.25em) {
+  .hero__textbox {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1.875rem;
+  }
+}
+.hero__textbox-text p {
+  font-size: 0.9375rem;
+  line-height: 1.625rem;
+  color: hsl(237deg, 13%, 42%);
+  margin-bottom: 1.875rem;
+}
+
+@media screen and (min-width: 56.25em) {
+  .hero-side {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    column-gap: 1.875rem;
+  }
+}
+
+.sidebar {
+  background-color: hsl(240deg, 100%, 5%);
+  padding: 1.5rem 1.25rem;
+}
+.sidebar__new {
+  color: hsl(35deg, 77%, 62%);
+  font-size: 2rem;
+  font-size: clamp(2rem, 1.82rem + 0.7511737089vw, 2.5rem);
+  font-weight: 700;
+  margin-bottom: 2.1875rem;
+}
+.sidebar__textbox {
+  display: flex;
+  flex-direction: column;
+  gap: 0.625rem;
+}
+.sidebar__textbox-link:link, .sidebar__textbox-link:visited {
+  color: hsl(36deg, 100%, 99%);
+  transition: all 0.3s;
+}
+.sidebar__textbox-link:hover {
+  color: hsl(35deg, 77%, 62%);
+}
+.sidebar__textbox-text {
+  font-size: 0.9375rem;
+  line-height: 1.625rem;
+  color: hsl(236deg, 8%, 79%);
+}
+.sidebar__textbox:not(:last-child) {
+  border-bottom: 1px solid hsl(237deg, 13%, 42%);
+  margin-bottom: 1.875rem;
+  padding-bottom: 1.875rem;
+}
+
+.articles {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+@media screen and (min-width: 56.25em) {
+  .articles {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+.articles__article {
+  display: flex;
+  gap: 1.125rem;
+  align-items: center;
+}
+.articles__article-img {
+  width: 6.25rem;
+  object-fit: cover;
+}
+.articles__article-number {
+  font-size: 2rem;
+  font-weight: 700;
+  color: hsl(236deg, 8%, 79%);
+  line-height: 2rem;
+  margin-bottom: 0.75rem;
+}
+.articles__article-link:link, .articles__article-link:visited {
+  color: hsl(240deg, 100%, 5%);
+  transition: all 0.3s;
+}
+.articles__article-link:hover {
+  color: hsl(5deg, 85%, 63%);
+}
+.articles__article-text {
+  font-size: 0.9375rem;
+  line-height: 1.625rem;
+  color: hsl(237deg, 13%, 42%);
+}
+
+.footer {
+  font-size: 0.9375rem;
+  color: hsl(237deg, 13%, 42%);
+  text-align: center;
+  line-height: 1.25rem;
+}
+.footer__link:link, .footer__link:visited {
+  color: hsl(240deg, 100%, 5%);
+  font-weight: 700;
+  transition: all 0.3s;
+}
+.footer__link:hover {
+  color: hsl(5deg, 85%, 63%);
+}
+
+.header {
+  padding: 1.875rem 0;
+}
+
+main {
+  margin-bottom: 4rem;
+}
+
+@media screen and (min-width: 56.25em) {
+  .hero-side {
+    margin-bottom: 4rem;
+  }
+}
+
+.hero {
+  margin-bottom: 4rem;
+}
+@media screen and (min-width: 56.25em) {
+  .hero {
+    margin-bottom: 0;
+  }
+}
+
+.sidebar {
+  margin-bottom: 4rem;
+}
+@media screen and (min-width: 56.25em) {
+  .sidebar {
+    margin-bottom: 0;
+  }
+}
+
+.footer {
+  padding-bottom: 4rem;
+}
+
+/*# sourceMappingURL=style.css.map */
