--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -41,11 +41,12 @@
   }
 }
 
-.navigation-bg {
+.overlay {
   @include breakpoint-desktop(small) {
     background-color: rgba($dark-blue, 0.7);
     inset: 0 0;
     position: fixed;
     height: 100vh;
+    z-index: 5;
   }
 }
